Fixed image size issue on small devices primary-instructor & bbyc pages.

--- a/SDWS/assets/css/style.css
+++ b/SDWS/assets/css/style.css
@@ -1396,7 +1396,7 @@ html {
       -moz-box-shadow: 0 5px 15px -8px rgba(0, 0, 0, 0.24), 0 8px 10px -5px rgba(0, 0, 0, 0.2); }
      
       .blog-recent .blog-article .card .image img {
-        width: 90%;
+        width: 50%;
         position: relative;
         bottom: 30px;
         border-radius: 5px;
